--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/tvrcgo/webpack-build-config#readme",
   "dependencies": {
+    "@types/node": "^7.0.7",
     "assets-webpack-plugin": "^3.5.1",
     "awesome-typescript-loader": "^3.0.8",
     "babel-core": "^6.23.1",
