--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "webpack build config",
   "main": "index.js",
   "bin": {
-    "vk": "./bin/cli.js"
+    "ak": "./bin/cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,6 +25,9 @@
   "homepage": "https://github.com/tvrcgo/webpack-build-config#readme",
   "dependencies": {
     "@types/node": "^7.0.7",
+    "@types/react": "^15.0.14",
+    "@types/react-dom": "^0.14.23",
+    "@types/react-router": "^3.0.6",
     "assets-webpack-plugin": "^3.5.1",
     "awesome-typescript-loader": "^3.0.8",
     "babel-core": "^6.23.1",
