--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
+    "chalk": "^1.1.3",
     "css-loader": "^0.26.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "minimist": "^1.2.0",
+    "node-emoji": "^1.5.1",
     "postcss-loader": "^1.3.3",
     "postcss-nested": "^1.0.0",
     "typescript": "^2.2.1",
