--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chalk": "^1.1.3",
     "css-loader": "^0.26.2",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "minimist": "^1.2.0",
@@ -48,6 +49,7 @@
     "postcss-loader": "^1.3.3",
     "postcss-nested": "^1.0.0",
     "typescript": "^2.2.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1"
   }
 }
