--- a/package.json
+++ b/package.json
@@ -45,9 +45,14 @@
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "minimist": "^1.2.0",
+    "mobx": "^3.1.0",
+    "mobx-react": "^4.1.0",
     "node-emoji": "^1.5.1",
     "postcss-loader": "^1.3.3",
     "postcss-nested": "^1.0.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
     "typescript": "^2.2.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1"
