--- a/package.json
+++ b/package.json
@@ -43,14 +43,17 @@
     "css-loader": "^0.26.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
+    "intelli-espower-loader": "^1.0.1",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "minimist": "^1.2.0",
     "mobx": "^3.1.0",
     "mobx-react": "^4.1.0",
+    "mocha": "^3.4.2",
     "node-emoji": "^1.5.1",
     "postcss-loader": "^1.3.3",
     "postcss-nested": "^1.0.0",
+    "power-assert": "^1.4.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
