--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "assets-webpack-plugin": "^3.5.1",
     "awesome-typescript-loader": "^3.0.8",
     "babel-core": "^6.23.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^6.4.0",
     "babel-plugin-import": "^1.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -41,6 +42,13 @@
     "chalk": "^1.1.3",
     "co": "^4.6.0",
     "css-loader": "^0.26.2",
+    "eslint": "^4.0.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-node": "^5.0.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "intelli-espower-loader": "^1.0.1",
