--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "chalk": "^1.1.3",
     "co": "^4.6.0",
+    "co-mocha": "^1.2.0",
     "css-loader": "^0.26.2",
     "eslint": "^4.0.0",
     "eslint-config-standard": "^10.2.1",
