--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "mobx-react": "^4.1.0",
     "mocha": "^3.4.2",
     "node-emoji": "^1.5.1",
+    "nyc": "^11.0.3",
     "postcss-loader": "^1.3.3",
     "postcss-nested": "^1.0.0",
     "power-assert": "^1.4.4",
