--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.10.1",
     "intelli-espower-loader": "^1.0.1",
     "less": "^2.7.2",
@@ -58,6 +58,7 @@
     "minimist": "^1.2.0",
     "mobx": "^3.1.0",
     "mobx-react": "^4.1.0",
+    "mobx-react-connect": "^0.2.7",
     "mocha": "^3.4.2",
     "node-emoji": "^1.5.1",
     "nyc": "^11.0.3",
