--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.10.1",
     "intelli-espower-loader": "^1.0.1",
     "less": "^2.7.2",
@@ -68,8 +68,9 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
+    "style-loader": "^0.19.1",
     "typescript": "^2.2.1",
     "url-loader": "^0.5.8",
-    "webpack": "^2.6.1"
+    "webpack": "^3.10.0"
   }
 }
